--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -5,3 +5,93 @@
 :root {
   --div-color: red;
 }
+
+body {
+  margin: 0;
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 24px;
+  color: #C4C4C4;
+}
+
+h1 {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 96px;
+  line-height: 110px;
+  color: #C4C4C4;
+  }
+
+h2 {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 48px;
+  line-height: 56px;
+  color: #C4C4C4;
+  }
+
+h3 {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 42px;
+  line-height: 49px;
+  color: #C4C4C4;
+  }
+
+
+
+h1 m {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 64px;
+  line-height: 75px;
+  color: #C4C4C4;
+  }
+
+h2 m {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 36px;
+  line-height: 34px;
+  color: #C4C4C4;
+  }
+
+h3 m {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 32px;
+  line-height: 37px;
+  color: #C4C4C4;
+  }
+
+subhead m {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 21px;
+  color: #C4C4C4;
+}
+
+body m {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 18px;
+  color: #C4C4C4;
+}
+
+header {
+  height: 75vh;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../main/assets/images/FEND-Coffee-latte-art-3.png);
+}
