--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -44,7 +44,14 @@ h3 {
   color: #C4C4C4;
   }
 
-
+.subhead {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 18px;
+  color: #C4C4C4;
+}
 
 h1 m {
   font-family: Roboto;
@@ -73,7 +80,7 @@ h3 m {
   color: #C4C4C4;
   }
 
-subhead m {
+.subhead_m {
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
@@ -92,6 +99,26 @@ body m {
 }
 
 header {
+  top: 0;
+  width: 100%;
   height: 75vh;
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../main/assets/images/FEND-Coffee-latte-art-3.png);
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../main/assets/images/FEND-Coffee-latte-art-3.png) no-repeat;
+  background-size: cover;
+  text-align: center;
+}
+
+.btn--dunkel {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 15px 50px;
+
+  width: auto;
+  height: auto;
+  top: 392px;
+
+  background: #1A1A1A;
+  border: 2px solid #1A1A1A;
+  box-sizing: border-box;
+  border-radius: 5px;
 }
