--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -1,17 +1,32 @@
+*,
+*::after,
+*::before {
+    margin: 0;
+    padding: 0;
+    box-sizing: inherit;
+  }
+
 body {
-  background: blue;
-
-  @media (min-width: 768px) {
-    background: linear-gradient(#e98a00, #f5aa2f);
-  }
+  width: 100%;
+  box-sizing: border-box;
+  display: flex;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
 }
 
-main {
-  div {
-    color: yellow;
-
-    @media (min-width: 768px) {
-      color: var(--div-color);
-    }
-  }
+h1 {
+  font-size: 64px;
+  color: $color--white;
+  font-weight: 900;
+  padding: 0.4em;
 }
+
+.header--subhead {
+  font-size: 18px;
+  color: $color--white;
+  font-weight: 400;
+  line-height: 100%;
+}
+
