--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,124 +1,9 @@
 @import "variables";
 @import "base";
 @import "components/hero";
+@import "components/home--header";
+@import "components/btn--dunkel";
 
 :root {
   --div-color: red;
-}
-
-body {
-  margin: 0;
-
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 24px;
-  color: #C4C4C4;
-}
-
-h1 {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 900;
-  font-size: 96px;
-  line-height: 110px;
-  color: #C4C4C4;
-  }
-
-h2 {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 900;
-  font-size: 48px;
-  line-height: 56px;
-  color: #C4C4C4;
-  }
-
-h3 {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 900;
-  font-size: 42px;
-  line-height: 49px;
-  color: #C4C4C4;
-  }
-
-.subhead {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 18px;
-  color: #C4C4C4;
-}
-
-h1 m {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 900;
-  font-size: 64px;
-  line-height: 75px;
-  color: #C4C4C4;
-  }
-
-h2 m {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 900;
-  font-size: 36px;
-  line-height: 34px;
-  color: #C4C4C4;
-  }
-
-h3 m {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 900;
-  font-size: 32px;
-  line-height: 37px;
-  color: #C4C4C4;
-  }
-
-.subhead_m {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 21px;
-  color: #C4C4C4;
-}
-
-body m {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 18px;
-  color: #C4C4C4;
-}
-
-header {
-  top: 0;
-  width: 100%;
-  height: 75vh;
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../main/assets/images/FEND-Coffee-latte-art-3.png) no-repeat;
-  background-size: cover;
-  text-align: center;
-}
-
-.btn--dunkel {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 15px 50px;
-
-  width: auto;
-  height: auto;
-  top: 392px;
-
-  background: #1A1A1A;
-  border: 2px solid #1A1A1A;
-  box-sizing: border-box;
-  border-radius: 5px;
 }
