--- a/src/css/components/_home--header.scss
+++ b/src/css/components/_home--header.scss
@@ -3,7 +3,9 @@
     flex-direction: column;
     text-align: center;
     background-image: url(../main/assets/images/FEND-Coffee-latte-art-3.png);
-    background-color: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
+    background-color: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
+    background-repeat: no-repeat;
+    background-size: contain;
     width: 100%;
     height: 75vh;
     object-fit: cover;
@@ -18,5 +20,11 @@
       width: 100%;
       margin: 10rem 0 5rem 0;
     }
-  
-  }
+    
+    .header--subhead {
+      font-size: 18px;
+      color: $color--white;
+      font-weight: 400;
+      line-height: 100%;
+    }
+}
