--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,7 +1,7 @@
 @import "variables";
 @import "base";
-@import "components/hero";
 @import "components/home--header";
+@import "components/main--section";
 @import "components/btn--dunkel";
 
 :root {
