--- a/src/css/components/_main--section.scss
+++ b/src/css/components/_main--section.scss
@@ -2,12 +2,6 @@
     margin: 60px 24px;
 }
 
-
-.section--text {
-    padding: 40px;
-    background-color: lawngreen;
-}
-
 .section--info {
     display: flex;
     flex-direction: row;
@@ -15,11 +9,25 @@
     margin: 20px 0;
 }
 
+.section--info-top {
+    
+    .section--img {
+        text-align: right;
+    }
+}
+
+.section--text-container {
+    margin: 20px 0px;
+}
+
+.section--text {
+    padding: 40px;
+    background-color: lawngreen;
+}
+
+
+
 .section--info-container {
     display: flex;
     width: 48%;
-}
-
-.section--img {
-    text-align: right;
 }
