build home__main--section-sorten

--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -35,8 +35,13 @@ $font--weight-h1: 900;
 $font--size-h2: 48px;
 $font--color-h2: $color--white;
 $font--weight-h2: 900;
-$font--margin-h2: 0.4em 0em;
+$font--margin-h2: 0.55em 0;
 
+// subhead m
+$font--font-family-sh-m: Roboto;
+$font--font-style-sh-m: normal;
+$font--font-weight-sh-m: 400;
+$font--font-size-sh-m: 18px;
 
 
 /**
