--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -2,6 +2,7 @@
 @import "base";
 @import "components/home--header";
 @import "components/main--section";
+@import "components/section--sorten";
 @import "components/btn--dunkel";
 
 :root {
