set up post-html, build home__main-section-herkunft

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -3,8 +3,6 @@
 @import "components/home--header";
 @import "components/main--section";
 @import "components/section--sorten";
+@import "components/section--herkunft";
 @import "components/btn--dunkel";
 
-:root {
-  --div-color: red;
-}
