--- a/src/css/components/_home--header.scss
+++ b/src/css/components/_home--header.scss
@@ -3,11 +3,11 @@
     flex-direction: column;
     text-align: center;
     background-image: url(../assets/main/images/FEND-Coffee-latte-art-3.png);
-    background-color: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
+    background-color: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
     background-repeat: no-repeat;
     width: 100%;
-    height: 60vh;
-    object-fit: cover;
+    height: 75vh;
+    background-size: cover;
     
     .home--header {
       top: 0;
@@ -17,7 +17,7 @@
   
     .header--title {
       width: 100%;
-      margin: 12rem 0 6rem 0;
+      margin: 14rem 0 7rem 0;
     }
     
     .header--subhead {
@@ -25,5 +25,9 @@
       color: $color--white;
       font-weight: 400;
       line-height: 100%;
+    }
+
+    .btn--dunkel {
+      bottom: 3em;
     }
 }
