--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -4,5 +4,6 @@
 @import "components/main--section";
 @import "components/section--sorten";
 @import "components/section--herkunft";
+@import "components/section--inhalt";
 @import "components/btn--dunkel";
 
