--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -5,5 +5,7 @@
 @import "components/section--sorten";
 @import "components/section--herkunft";
 @import "components/section--inhalt";
+@import "components/section--ort";
+@import "components/footer.scss";
 @import "components/btn--dunkel";
 
