--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -3,7 +3,7 @@
 // Colors
 
 $color--white: rgba(255,255,255,1);
-$color--black: (0,0,0,0,1);
+$color--black: rgb(0, 0, 0);
 $color--anthrazit: rgba(26,26,26,1);
 $color--kraftpapier: rgba(215,190,157,1);
 $color--petrol: rgba(0,109,126,1);
@@ -33,15 +33,35 @@ $font--weight-h1: 900;
 
 // h2
 $font--size-h2: 48px;
-$font--color-h2: $color--white;
 $font--weight-h2: 900;
 $font--margin-h2: 0.55em 0;
+
+// h3
+$font--font-size-h3: 42px;
+$font--font-weight-h3: 900;
+
+//h4 
+$font--font-size-h4: 24px;
 
 // subhead m
 $font--font-family-sh-m: Roboto;
 $font--font-style-sh-m: normal;
 $font--font-weight-sh-m: 400;
 $font--font-size-sh-m: 18px;
+
+$font--font-weight-regular: 400;
+
+// Links
+
+$color--link: $color--white;
+$color--link-visited: $color--anthrazit;
+$color--link-hover: $color--medium-grey;
+$color--link-active: $color--medium-grey;
+
+
+
+
+ /* unvisited link */
 
 
 /**
