--- a/src/css/components/_section--inhalt.scss
+++ b/src/css/components/_section--inhalt.scss
@@ -2,7 +2,7 @@
     display: inline-block;
     text-align: center;
     width: 100%;
-    margin-bottom: 1.5em;
+    margin-bottom: 2rem;
 
     .display--product-img {
         width: 60%;
