build _café full page-m

--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -19,12 +19,12 @@ $color--btn-dunkel-active: 215,190,157,1;
 
 // Fonts
 
-// body
+// body m
 
 $font--body-font-family: Roboto;
 $font--body-font-style: normal;
 $font--body-font-weight: 400;
-$font--body-font-size: 16px;
+$font--body-font-size: 14px;
 
 // h1
 $font--size-h1: 64px;
