--- a/src/templates/_footer.html
+++ b/src/templates/_footer.html
@@ -17,7 +17,7 @@
                 <li class="body-text"><a href="#">Datenschutz</a></li>
             </ul>
             <ul>
-                <li class="body-text"><a href="#">Café</a></li>
+                <li class="body-text"><a href="./café.html">Café</a></li>
                 <li class="body-text"><a href="#">Shop</a></li>
                 <li class="body-text"><a href="#">Herkunft</a></li>
             </ul>
