--- a/src/css/components/_header.scss
+++ b/src/css/components/_header.scss
@@ -2,14 +2,13 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    background-image: url(../assets/main/images/FEND-Coffee-latte-art-3.png);
-    background-color: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../assets/main/images/FEND-Coffee-latte-art-3.png);
     background-repeat: no-repeat;
     width: 100%;
     height: 75vh;
     background-size: cover;
     
-    .home--header {
+    .header {
       top: 0;
       width: 100%;
       height: 100%;
@@ -30,4 +29,15 @@
     .btn--dunkel {
       bottom: 3em;
     }
+}
+
+#café--header-container {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../assets/main/images/FEND-Coffee-shop.jpg);
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 50vh;
+  background-size: cover;
 }
