--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,11 +1,12 @@
 @import "variables";
 @import "base";
-@import "components/home--header";
+@import "components/header";
 @import "components/main--section";
 @import "components/section--sorten";
 @import "components/section--herkunft";
 @import "components/section--inhalt";
 @import "components/section--ort";
+@import "components/section--gallery";
 @import "components/footer.scss";
 @import "components/btn--dunkel";
 
