build herkunft__ mobile, build impressum__ mobile

--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -9,7 +9,7 @@
 body {
   width: 100%;
   box-sizing: border-box;
-  display: inline-block;
+  display: block;
   font-family: $font--body-font-family;
   font-style: $font--body-font-style;
   font-weight: $font--body-font-weight;
