--- a/src/templates/_footer.html
+++ b/src/templates/_footer.html
@@ -13,13 +13,13 @@
         </div>
         <div class="footer--info-content">
             <ul>
-                <li class="body-text"><a href="#">Impressum</a></li>
+                <li class="body-text"><a href="./impressum.html">Impressum</a></li>
                 <li class="body-text"><a href="#">Datenschutz</a></li>
             </ul>
             <ul>
                 <li class="body-text"><a href="./café.html">Café</a></li>
                 <li class="body-text"><a href="#">Shop</a></li>
-                <li class="body-text"><a href="#">Herkunft</a></li>
+                <li class="body-text"><a href="./herkunft.html">Herkunft</a></li>
             </ul>
         </div>
     </div>
