--- a/src/css/components/_header.scss
+++ b/src/css/components/_header.scss
@@ -38,6 +38,19 @@
   background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../assets/main/images/FEND-Coffee-shop.jpg);
   background-repeat: no-repeat;
   width: 100%;
-  height: 50vh;
+  height: 40vh;
+  background-size: cover;
+}
+
+
+#herkunft--header-container {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../assets/main/images/FEND-Coffee-beans-hand-2.jpg); 
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 100%;
+  height: 40vh;
   background-size: cover;
 }
