--- a/src/templates/_footer.html
+++ b/src/templates/_footer.html
@@ -1,8 +1,8 @@
 <div class="main--section" class="footer--logo-titel">
-    <img src="../src/assets/main/icons/Logo.svg" alt="Rustica Logo">
+    <img src="../src/assets/main/icons/icon__logo_wh.svg" alt="Rustica Logo">
     <div class="footer--logo-text">
         <h4>Rustica</h4>
-        <p>Café & Rösterei</p>
+        <p class="subhead-m">Café & Rösterei</p>
     </div>
     <div class="footer--info">
         <div class="footer--info-content-wide">
