--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,5 +1,7 @@
 @import "variables";
+@import "mixins";
 @import "base";
+@import "typography";
 @import "components/header";
 @import "components/main--section";
 @import "components/section--sorten";
