--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -6,11 +6,25 @@
     box-sizing: inherit;
   }
 
-
 html {
-  font-size: 10px; 
-}
+  font-size: 62.5%; 
 
+  @include mq(media-sm) {
+    font-size: 80%;
+  }
+  @include mq(media-md) {
+    font-size: 95%;
+  }
+  @include mq(media-lg) {
+    font-size: 112.5%;
+  }
+  @include mq(media-xl) {
+    font-size: 130%;
+  }
+  @include mq(media-xxl) {
+    font-size: 130%;
+  }
+}
 
 body {
   width: 100%;
@@ -20,6 +34,11 @@ body {
   font-style: $font--font-style-body;
   font-weight: $font--font-weight-body;
   font-size: $font--font-size-body;
+
+  @include mq(media-xxl) {
+    max-width: 2200px;
+    margin: auto;
+  }
 }
 
 img {
