--- a/src/css/components/_header.scss
+++ b/src/css/components/_header.scss
@@ -35,7 +35,7 @@
     }
 }
 
-#café--header-container {
+#cafe--header-container {
   background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../assets/main/images/FEND-Coffee-shop.jpg);
   height: 40vh;
   @extend %header-container-ph;
