--- a/src/css/components/_section--gallery.scss
+++ b/src/css/components/_section--gallery.scss
@@ -1,29 +1,27 @@
-#cafe__section--gallery{
+#cafe__section--gallery {
+    margin: 0;
+    padding-bottom: 4rem;
+    width: auto;
     display: block;
-    
 }
 
-.gallery--container-shell {
-
-    .gallery--container {
+.gallery--container {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    align-content: space-between;
-    height: 100vh;
-    }
-
-    .gallery-img{
-        width: 48%;
-        height: auto;
-        margin-bottom: 1rem;
-    }
-
-    .gallery--img-left {
-        width: 48%;
-        height: auto;
-        margin-bottom: 1rem;
-        margin-right: 1rem;;
-    }
+    height: 105vh;
 }
 
+.gallery-img {
+    width: 48%;
+    height: auto;
+    margin-bottom: 1rem;
+}
+
+.gallery--img-left {
+    width: 48%;
+    height: auto;
+    margin-bottom: 1rem;
+    margin-right: 1rem;
+    ;
+}
