--- a/src/css/components/_main--section.scss
+++ b/src/css/components/_main--section.scss
@@ -13,6 +13,10 @@
         flex-direction: column;
     }
 }
+
+#section--ort {
+    width: 100%;
+}
 .main--section {
     padding: 6rem 2.4rem;
     display: inline-block;
