--- a/src/css/components/_section--herkunft.scss
+++ b/src/css/components/_section--herkunft.scss
@@ -7,6 +7,7 @@
     background-repeat: no-repeat;
     width: 100%;
     height: 33rem;
+    min-height: 300px;
     background-size: cover;
     color: $color--white;
 
