update on a few images

--- a/src/css/components/_header.scss
+++ b/src/css/components/_header.scss
@@ -8,7 +8,7 @@
 }
 
 #home--header-container {
-    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0.05)), url(../assets/main/images/FEND-Coffee-latte-art-3.png);
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0.05)), url(../assets/main/images/FEND-Coffee-latte-art-3.jpg);
     height: 75vh;
     @extend %header-container-ph;
 
