--- a/src/css/typography.scss
+++ b/src/css/typography.scss
@@ -1,23 +1,39 @@
 h1 {
-  font-size: $font--size-h1;
+  font-size: $font--font-size-h1-m;
   color: $color--white;
-  font-weight: $font--weight-h1;
+  font-weight: $font--font-weight-h1-m;
+
+  @include mq(media-xl) {
+    font-size: $font--font-size-h1;
+  }
 }
 
 h2 {
-  font-size: $font--size-h2;
+  font-size: $font--font-size-h2-m;
   font-weight: $font--weight-h2;
   margin: $font--margin-h2;
+
+  @include mq(media-xl) {
+    font-size: $font--font-size-h2;
+  }
 }
 
 h3 {
   font-size: $font--font-size-h3-m;
   font-weight: $font--font-weight-h3-m;
   margin: $font--margin-h3-m;
+
+  @include mq(media-xl) {
+    font-size: $font--font-size-h3;
+  }
 }
 
 h4 {
   font-size: $font--font-size-h4;
+
+  @include mq(media-xl) {
+    font-size: $font--font-size-h4;
+  }
 }
 
 .subhead-m {
