--- a/src/css/components/_main--section.scss
+++ b/src/css/components/_main--section.scss
@@ -1,9 +1,15 @@
 #home__section--info {
-    .section--info {
-        flex-direction: column;
+    .btn--dunkel {
+        height: auto;
+        width: auto;
+        background: none;
+        border: none;
+        text-align: left;
+        color: black;
+        padding: 0;
+        font-size: 1.8rem;
     }
 }
-
 #cafe__section--info {
     padding-bottom: 0;
 }
@@ -17,12 +23,21 @@
 #section--ort {
     width: 100%;
 }
+
 .main--section {
     padding: 6rem 2.4rem;
-    display: inline-block;
+
+    @include mq(media-xl) {
+        display: inline-block;
+        padding: 12.5rem 10rem;
+    }
 
     p {
-        margin-bottom: 1rem;
+        margin-bottom: 2rem;
+
+        @include mq(media-xl) {
+            margin-bottom: 3.5rem;
+        }
     }
 
     &-dark {
@@ -35,16 +50,53 @@
 
 %section--info-ph {
     display: flex;
+
+    @include mq(media-xl) {
+        flex-direction: row;
+        align-items: flex-start;
+    }
 }
 
 .section--info {
     @extend %section--info-ph;
+    flex-direction: column;
 
-    &-right {
+    @include mq(media-xl) {
+        flex-direction: row-reverse;
+    }
+
+    &:nth-of-type(odd) {
         flex-direction: column;
         align-items: flex-end;
-        margin-bottom: 3rem;
         @extend %section--info-ph;
+
+        @include mq(media-xl) {
+            margin-bottom: 13rem;
+        }
+    }
+
+    .section--text-container {
+        display: flex;
+        flex-direction: column;
+
+        @include mq(media-xl) {
+        padding-right: 12rem;
+        }
+
+        &:not(:last-of-type) {
+        padding-bottom: 2rem;
+        }      
+    }
+
+    &:nth-child(2n) {
+
+        .section--text {
+            @include mq(media-xl) {
+                padding-left: 12rem;
+                padding-top: 5rem;
+                padding-right: 10rem;
+            }
+        }
     }
 
     &-row {
@@ -59,32 +111,40 @@
 
 }
 
+.section--container {
+
+    @include mq(media-xl) {
+        width: 50%;
+    }
+
+    img {
+        @include mq(media-xl) {
+            width: 100%;
+        }
+    }
+}
+
 .section--img {
     margin: 1.5em 0;
     width: 85%;
 
-    &-right {
-        margin: 1.5em 0;
-        text-align: right;
-        width: 85%;
+    @include mq(media-xl) {
+        margin: 0;
+        width: 100%;
     }
 
     &-full {
         margin: 1.5em 0em 2em 0em;
         width: 100%;
     }
-}
 
-.section--text-container {
-    display: flex;
-    flex-direction: column;
+    &-right {
+        margin: 4em 0;
+        text-align: right;
+        width: 85%;
 
-    &:not(:last-of-type) {
-    padding: 0 0 2rem 0;
+        @include mq(media-xl) {
+            margin: 0;
+        }
     }
-}
-
-.section--text {
-    padding: 40px;
-    background-color: lawngreen;
 }
