--- a/src/css/components/_header.scss
+++ b/src/css/components/_header.scss
@@ -4,43 +4,53 @@
   width: 100%;
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center; 
+  background-position: center;
 }
 
+$margin--btn-bottom: 6rem;
+
 #home--header-container {
-    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0.05)), url(../assets/main/images/FEND-Coffee-latte-art-3.jpg);
-    height: 75vh;
-    @extend %header-container-ph;
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0.05)), url(../assets/main/images/FEND-Coffee-latte-art-3.jpg);
+  height: 75vh;
+  @extend %header-container-ph;
 
-    @include mq(media-xl) {
-      height: 65vh;
-    }
+  @include mq(media-xl) {
+    height: 65vh;
+  }
 
-    .header {
-      top: 0;
+  .header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    width: 100%;
+    height: 100%;
+
+    &--title {
+      margin-top: auto;
       width: 100%;
-      height: 100%;
     }
-  
-    .header--title {
-      width: 100%;
-      margin: 28.5vh 0 15vh 0;
 
-      @include mq(media-xl) {
-      margin: 24vh 0 15vh 0;
-      }
-    }
-    
-    .header--subhead {
+    &--subhead {
       font-size: 18px;
       color: $color--white;
       font-weight: 400;
       line-height: 100%;
     }
 
-    .btn--dunkel {
-      bottom: 3em;
+    .spacer {
+      visibility: hidden;
     }
+
+  }
+
+  .btn--container {
+    margin-top: auto;
+  }
+
+  .btn--dunkel {
+    margin-bottom: $margin--btn-bottom;
+  }
 }
 
 #cafe--header-container {
@@ -51,7 +61,7 @@
 
 
 #herkunft--header-container {
-  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../assets/main/images/FEND-Coffee-beans-hand-2.jpg); 
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../assets/main/images/FEND-Coffee-beans-hand-2.jpg);
   height: 40vh;
   @extend %header-container-ph;
 }
