refine desktop MQs (_footer, home), build _nav

--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -82,11 +82,12 @@ $font--margin-h3: 0 0 2.4rem 0;
 $font--font-size-h4: 2.4rem;
 $font--margin-h4: 0 0 1.2rem 0;
 
-// subhead m
+// subhead
 $font--font-family-sh: Roboto;
 $font--font-style-sh: normal;
 $font--font-weight-sh: 400;
 $font--font-size-sh: 1.8rem;
+$font--margin-sh: 0 0 0.7rem 0;
 
 
 // LINKS
