--- a/src/css/components/_section--herkunft.scss
+++ b/src/css/components/_section--herkunft.scss
@@ -1,19 +1,29 @@
 #section--herkunft {
-    padding-top: 8.7rem;
+    padding: 8.7rem 0;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../assets/main/images/FEND-Coffee-bags-2.jpg);
+    justify-content: center;
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/main/images/FEND-Coffee-bags-2.jpg);
     background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     width: 100%;
     height: 33rem;
     min-height: 300px;
-    background-size: cover;
     color: $color--white;
+
+    @include mq(media-xl) {
+        height: 50vh;
+    }
 
     .body-text {
         text-align: center;
         width: 70%;
+
+        @include mq(media-xl) {
+            width: 20%;
+        }
     }
 
     .btn--dunkel {
