--- a/src/templates/_footer.html
+++ b/src/templates/_footer.html
@@ -1,26 +1,26 @@
-<div class="main--section" class="footer--logo-titel">
-    <img src="../src/assets/main/icons/icon__logo_wh.svg" alt="Rustica Logo">
     <div class="footer--logo-text">
-        <h4>Rustica</h4>
-        <p class="subhead-m">Café & Rösterei</p>
+        <img src="../src/assets/main/icons/icon__logo_wh.svg" alt="Rustica Logo">
+        <p class="footer--head">Rustica</p>
+        <p class="footer--subhead">Café & Rösterei</p>
     </div>
     <div class="footer--info">
         <div class="footer--info-content-wide">
-            <p>Komm uns besuchen!
+            <p class="footer--text">Komm uns besuchen!<br>
                 Fraunhoferstr. 13, Kiel</p>
-            <p>Mo – Fr 8–18 Uhr<br>
+            <p class="footer--text">Mo – Fr 8–18 Uhr<br>
                 Sa 11–18 Uhr</p>
         </div>
-        <div class="footer--info-content">
+        <div class="footer--info-links">
             <ul>
-                <li class="body-text"><a href="./impressum.html">Impressum</a></li>
-                <li class="body-text"><a href="#">Datenschutz</a></li>
+                <li><a href="./impressum.html">Impressum</a></li>
+                <li><a href="#">Datenschutz</a></li>
             </ul>
+        </div>
+        <div class="footer--info-links">
             <ul>
-                <li class="body-text"><a href="./cafe.html">Café</a></li>
+                <li><a href="./cafe.html">Café</a></li>
                 <li class="body-text"><a href="#">Shop</a></li>
                 <li class="body-text"><a href="./herkunft.html">Herkunft</a></li>
             </ul>
         </div>
     </div>
-</div>
