--- a/src/css/components/_btn--dunkel.scss
+++ b/src/css/components/_btn--dunkel.scss
@@ -12,7 +12,7 @@
     text-align: center;
     -webkit-appearance: none;
     -moz-appearance: none;
-    font-size: 1.4rem;
+    font-size: $font--font-size-body;
   
     &:hover,
     &:focus {
