--- a/src/css/components/_section--ort.scss
+++ b/src/css/components/_section--ort.scss
@@ -7,6 +7,10 @@
     .section--head {
         margin: 0;
         padding:  0rem 2.4rem;
+
+        @include mq(media-xl) {
+            padding: 0 10rem;
+        }
     }
 
     .background--container {
@@ -16,5 +20,10 @@
     .background-img {
         width: 100%;
         height: 50vh;
+    }
+
+    iframe {
+        margin: 0;
+        padding: 0;
     }
 }
