--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -2,6 +2,7 @@
 @import "mixins";
 @import "typography";
 @import "base";
+@import "components/nav";
 @import "components/header";
 @import "components/main--section";
 @import "components/section--sorten";
