--- a/src/css/components/_section--inhalt.scss
+++ b/src/css/components/_section--inhalt.scss
@@ -45,17 +45,24 @@
 
     .icon-wrapper {
         display: flex;
+        justify-content: space-between;
+        width: 100%;
+
+        @include mq(media-xl) {
         flex-direction: column;
         justify-content: space-between;
         height: 100%;
+        width: auto;
         margin-bottom: 10rem;
+        }
     }
     .display--info-container {
-        display: flex;
+        display: block;
         justify-content: space-between;
         margin: 3rem 0 2rem 0;
 
         @include mq(media-xl) {
+            display: flex;
             margin: 0;
             width: 40rem;
             flex-direction: column;
@@ -74,7 +81,7 @@
 
         @include mq(media-xl) {
             display: flex;
-            justify-content: center;
+            justify-content: flex-start;
             width: 100%;
         }
     }
@@ -82,6 +89,11 @@
     .body-text {
         text-align: center;
         width: 100%;
+
+        @include mq(media-xl) {
+            width: auto;
+            text-align: left;
+        }
 
     }
 
