--- a/src/css/components/_section--ort.scss
+++ b/src/css/components/_section--ort.scss
@@ -3,7 +3,6 @@
     margin: 0;
     width: 100%;
 
-
     .section--head {
         margin: 0;
         padding:  0rem 2.4rem;
@@ -20,6 +19,10 @@
     .background-img {
         width: 100%;
         height: 50vh;
+
+        @include mq(media-xl) {
+            height: 30vh;
+        }
     }
 
     iframe {
