--- a/src/css/_mixins.scss
+++ b/src/css/_mixins.scss
@@ -14,9 +14,23 @@
     } 
     @else if $size == media-sm {
         @media (min-width: 36em) { @content; } // 576px
+    }   
+}
+
+@mixin mq-rv($size){
+    @if $size == media-xxl {
+        @media (max-width: 120em) { @content; } // 1920px
+    }
+    @else if $size == media-xl {
+        @media (max-width: 87.5em) { @content; } // 1200px
+    }
+    @else if $size == media-lg {
+        @media (max-width: 62em) { @content; } // 992px
+    }
+    @else if $size == media-md {
+        @media (max-width: 50em) { @content; } // 768px
     } 
-    
-     
-     
-    
-  }
+    @else if $size == media-sm {
+        @media (max-width: 36em) { @content; } // 576px
+    }   
+}
