--- a/src/templates/_nav.html
+++ b/src/templates/_nav.html
@@ -1,4 +1,4 @@
-<div id="nav" class="navbar">
+<div id="nav-d" class="navbar">
     <div class="nav--logo">
         <a href="index.html"><img src="../src/assets/main/icons/icon__logo_wh.svg" alt="Rustica Logo"></a>
     </div>
