--- a/src/css/components/_btn--dunkel.scss
+++ b/src/css/components/_btn--dunkel.scss
@@ -1,4 +1,3 @@
-
 .btn--dunkel {
     display: inline-block;
     color: $color--white;
@@ -23,8 +22,22 @@
       background: $color--btn-dunkel-hover;
       border:  2px solid $color--btn-dunkel-hover;
     }
+    
     &:active {
       background: $color--btn-dunkel-active;
       border:  2px solid $color--btn-dunkel-active;
     }
   }
+
+  #home__section--info {
+    .btn--dunkel {
+        height: auto;
+        width: auto;
+        background: none;
+        border: none;
+        text-align: left;
+        color: black;
+        padding: 0;
+        font-size: 1.8rem;
+    }
+}
