--- a/src/css/components/_main--section.scss
+++ b/src/css/components/_main--section.scss
@@ -1,15 +1,4 @@
-#home__section--info {
-    .btn--dunkel {
-        height: auto;
-        width: auto;
-        background: none;
-        border: none;
-        text-align: left;
-        color: black;
-        padding: 0;
-        font-size: 1.8rem;
-    }
-}
+// IDs
 
 #cafe__section--info {
     padding-bottom: 0;
@@ -19,6 +8,31 @@
     .section--info {
         flex-direction: column;
     }
+
+    .section--info-full {
+        flex-direction: column;
+    
+        @include mq(media-xl) {
+            flex-direction: row-reverse;
+        }
+    }
+}
+
+// CLASSES
+
+video {
+    margin: 1.5em 0;
+    width: 85%;
+    height: auto;
+
+    @include mq(media-xl) {
+        margin: 0;
+    }
+}
+
+.video--full {
+    margin: 1.5em 0em 2em 0em;
+    width: 100%;
 }
 
 
