--- a/src/css/components/_nav.scss
+++ b/src/css/components/_nav.scss
@@ -1,3 +1,13 @@
+#nav-d {
+    background-color: green; // for testing
+
+    padding: 1rem 10rem;
+
+    @include mq-rv(media-md) {
+        display: none;
+    }
+}
+
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -6,28 +16,56 @@
     top: 0;
     width: 100%;
     height: 5.5rem;
-    padding: 1rem 10rem;
 
     ul {
         list-style: none;
     }
 
-    img {
-        height: 100%;
+    .nav--logo {
+        img {
+            height: 100%;
+        }
     }
 
     .nav--links {
         display: flex;
         flex-direction: row;
+        justify-content: flex-start;
+        height: 100%;
 
         li {
+            margin-top: 1rem;
+
             &:not(:last-of-type) {
                 margin-right: 7rem;
+            }
+
+            a {
+                text-decoration: none;
+
+                &:after {
+                    background: none repeat scroll 0 0 transparent;
+                    content: "";
+                    display: block;
+                    height: .1rem;
+                    background: $color--white;
+                    transition: width 0.3s ease 0s, left 0.3s ease 0s;
+                    width: 0;
+                }
+
+                &:hover:after {
+                    width: 100%;
+                    left: 0;
+                }
             }
         }
     }
 
     div {
         height: 100%;
+    }
+
+    @include mq(media-xxl) {
+        max-width: 220rem;
     }
 }
