--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -3,6 +3,7 @@
 @import "typography";
 @import "base";
 @import "components/nav";
+@import "components/nav-m";
 @import "components/header";
 @import "components/main--section";
 @import "components/section--sorten";
